# oyk

./: Cargo.toml  README.md  build.rs
include/: bridge.hpp  bridge_bindings.rs
ode/: drawstuff.h  drawstuff_bindings.rs  ode.hpp  ode_bindings.rs
ode/lib/: drawstuff.def  drawstuff.lib
src/: bridge.cpp  colors.rs  lib.rs  ode.rs
src/ode/: cdrawstuff.rs  cls.rs  cppbridge.rs  cppode.rs  ds.rs  err.rs  krp.rs  mat.rs  meta.rs  prim.rs  trimeshconvex.rs
src/ode/cls/: obg.rs
src/ode/trimeshconvex/: bunny.rs  cube.rs  custom.rs  icosahedron.rs  tetra.rs  trimesh_bunny.rs  trimesh_cube.rs  trimesh_custom.rs  trimesh_icosahedron.rs  trimesh_tetra.rs
