[package]
name = "oyk"
version = "0.10.1" # change with html_root_url in lib.rs
edition = "2021"
authors = ["nomissbowling <nomissbowling@yahoo.co.jp>"]

description = "OYK is ODE (Open Dynamics Engine) bindings for Rust yaw kinetics"
keywords = ["opengl", "dynamics", "kinetics", "physics", "3D"]
categories = ["simulation", "rendering", "science", "external-ffi-bindings"]
license = "MIT"

documentation = "https://docs.rs/oyk/"
homepage = "https://crates.io/crates/oyk"
repository = "https://github.com/nomissbowling/oyk"

readme = "README.md"

#build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell = "1.17.1"

asciiz = { version = "0.1" }

# anyslot = { version = "0.1" }

drawstuff = { version = "0.1" }
ode-base = { version = "0.1" }

impl_sim = { version = "0.3" }

home = { version = "=0.5.5" } # cc(1.0.79)/bindgen(0.65.1) requires home(0.5.5)

[build-dependencies]
cc = "=1.0.79"
bindgen = "=0.65.1"

[package.metadata.docs.rs]
rustc-args = ["--cfg", "docsrs"]
